libs/pavex_cli/tests/ui_tests/trait_methods_with_non_local_generics_are_not_supported/expectations/stderr.txt
[31m[1mERROR[0m[39m: 
  × I do not know how to handle the type returned by `<app::B as
  │ app::GenericTrait::<app::A>>::a_method_using_the_trait_generic_param`.
    ╭─[src/lib.rs:28:1]
 28 │     bp.constructor(
 29 │         f!(<crate::B as crate::GenericTrait<crate::A>>::a_method_using_the_trait_generic_param),
    ·         ───────────────────────────────────────────┬───────────────────────────────────────────
    ·                                                    ╰── The constructor was registered here
 30 │         Lifecycle::RequestScoped,
    ╰────

Error: 
  × 
    ╭─[src/lib.rs:11:1]
 11 │ pub trait GenericTrait<T> {
 12 │     fn a_method_using_the_trait_generic_param() -> T;
    ·                                                    ┬
    ·                                                    ╰── The output type that I cannot handle
 13 │ }
    ╰────